--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "build": "yarn dvm build",
     "clean": "yarn dvm clean",
@@ -7,7 +7,8 @@
     "deno": "DENO_DIR=.deno .deno/bin/deno",
     "dvm": "./dvm",
     "launch": "yarn compile && ./launch",
-    "postinstall": "yarn dvm bootstrap"
+    "postinstall": "yarn dvm bootstrap",
+    "publish": "gcloud builds submit --config cloudbuild.yaml ."
   },
   "dependencies": {
     "deno_ls_plugin": "^0.1.0",
