chore: move source files to src

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "scripts": {
     "build": "yarn dvm build",
     "clean": "yarn dvm clean",
-    "compile": "yarn deno bundle helloWorld.ts out.js",
+    "deploy": "yarn clean && yarn build && yarn gcloud",
     "deno": "DENO_DIR=.deno .deno/bin/deno",
     "dvm": "./dvm",
-    "launch": "yarn compile && ./launch",
-    "postinstall": "yarn dvm bootstrap",
-    "publish": "gcloud builds submit --config cloudbuild.yaml ."
+    "gcloud": "gcloud builds submit --config cloudbuild.yaml .",
+    "launch": "yarn build && ./launch",
+    "postinstall": "yarn dvm bootstrap"
   },
   "dependencies": {
     "deno_ls_plugin": "^0.1.0",
