--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "scripts": {
     "build": "yarn dvm build",
     "clean": "yarn dvm clean",
-    "deploy": "yarn clean && yarn build && yarn gcloud",
+    "deploy": "gcloud builds submit --config cloudbuild.yaml .",
     "deno": "DENO_DIR=.deno .deno/bin/deno",
     "dvm": "./dvm",
-    "gcloud": "gcloud builds submit --config cloudbuild.yaml .",
     "launch": "yarn build && ./launch",
     "postinstall": "yarn dvm bootstrap"
   },
