chore: remove unneeded files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "prettier.printWidth": 120,
-  "prettier.quoteProps": "consistent",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "prettier.quoteProps": "consistent"
 }
